fix issue wher youtube logo would render akwardly on ios

--- a/web-ui/src/components/preview.less
+++ b/web-ui/src/components/preview.less
@@ -29,7 +29,7 @@
   }
 
   * .logo {
-    height: 18px !important;
+    height: 20px !important;
     border-radius: 3px;
   }
 
